<resources>
    <string name="app_name">学习资料</string>

    <string name="title">Xinzzhu</string>
    <string name="follow">关注</string>
    <string name="replay">重播</string>
    <string name="share">分享</string>
    <string name="fans">粉丝</string>
    <string name="comment">评论</string>
    <string name="views">次观看</string>

    <string name="controller_speed">倍速</string>

    <string name="speed_75">0.75X</string>
    <string name="speed_100">1.0X</string>
    <string name="speed_125">1.25X</string>
    <string name="speed_150">1.5X</string>
    <string name="speed_200">2X</string>

    <string name="speed_play">倍速播放中</string>

    <string name="main_video_item_interact_praise">赞</string>
    <string name="main_video_item_interact_stepped">踩</string>
    <string name="main_video_item_interact_comment">评论</string>
    <string name="main_video_item_interact_share">分享</string>

    <string name="bar_trainee">练习生</string>

    <string name="trainee_mvp">MVP</string>
    <string name="trainee_mvvm">MVVM</string>
    <string name="trainee_rx_retrofit">RxRetrofit</string>
    <string name="trainee_staggered">Staggered</string>
    <string name="trainee_player">Player</string>
    <string name="trainee_grid">TouchGrid</string>
    <string name="trainee_gesture">GestureView</string>
    <string name="trainee_loadpage">LoadPage</string>

    <string name="trainee_other">待定</string>

    <string name="camera_title">UVC摄像头</string>
    <string name="camera_photograph">拍照</string>
    <string name="camera_start_recording">开始录制</string>
    <string name="camera_stop_recording">停止录制</string>

    <string name="mvp_title">Mvp模式</string>

    <string name="rx_retrofit_title">RxRetrofit</string>
    <string name="rx_retrofit_menu_normal">normal 请求</string>
    <string name="rx_retrofit_menu_dialog">Dialog</string>
    <string name="rx_retrofit_menu_loadsir">LoadSir</string>

    <string name="staggered_grid_title">图片缓存（%s）</string>

    <string name="share_element_title">ShareElement</string>
    <string name="share_element_picture">picture_</string>
    <string name="share_element_content">content_</string>

    <string name="player_title">KsgVideoPlayer</string>

    <string name="preview_count">%d/%d</string>

    <string name="loading_mvvm">MVVM加载中~</string>

    <string name="drap_title">拖拽</string>
    <string name="share_cancel">取消分享</string>

</resources>
