<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cover_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/color_48000000">

    <!-- Top -->
    <LinearLayout
        android:id="@+id/cover_controller_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ic_shadow_top">

        <!-- Back -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cover_controller_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_cover_back" />

    </LinearLayout>

    <!-- Bottom -->
    <RelativeLayout
        android:id="@+id/cover_controller_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_shadow_bottom">

        <!-- Curr Time-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cover_controller_curr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/cover_controller_play"
            android:layout_alignTop="@id/cover_controller_seek"
            android:layout_alignBottom="@id/cover_controller_seek"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            tools:text="00:00" />

        <!-- SeekBar -->
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/cover_controller_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cover_controller_play"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/cover_controller_duration_time"
            android:layout_toEndOf="@id/cover_controller_curr_time"
            android:maxHeight="3.5dp"
            android:minHeight="3.5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:progressDrawable="@drawable/shape_seek_bar"
            android:splitTrack="false"
            android:thumb="@drawable/selector_seek_bar_thumb"
            tools:progress="20"
            tools:secondaryProgress="40" />

        <!-- DurationTime -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cover_controller_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cover_controller_seek"
            android:layout_alignEnd="@id/cover_controller_fullscreen"
            android:layout_alignBottom="@id/cover_controller_seek"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:splitTrack="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            tools:text="00:00" />

        <!-- Start/Pause-->
        <com.kaisengao.ksgframe.common.widget.PlayStateView
            android:id="@+id/cover_controller_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="12dp"
            tools:rotation="90" />

        <!-- 弹幕 Show/Hide -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cover_controller_danmaku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cover_controller_fullscreen"
            android:layout_alignBottom="@id/cover_controller_fullscreen"
            android:layout_marginStart="@dimen/view_space"
            android:layout_marginEnd="@dimen/view_space"
            android:layout_toEndOf="@id/cover_controller_play"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:src="@drawable/selector_danmaku_state"
            android:tint="@color/white"
            tools:ignore="RelativeOverlap" />

        <!-- 倍速 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cover_controller_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cover_controller_fullscreen"
            android:layout_alignBottom="@id/cover_controller_fullscreen"
            android:layout_marginEnd="@dimen/view_space"
            android:layout_toStartOf="@id/cover_controller_fullscreen"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/controller_speed"
            android:textColor="@color/selector_speed"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <!-- Fullscreen -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cover_controller_fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cover_controller_play"
            android:layout_alignBottom="@id/cover_controller_play"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:src="@drawable/selector_fullscreen_state" />

    </RelativeLayout>

    <!-- 倍速选择 -->
    <RadioGroup
        android:id="@+id/cover_controller_speeds"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:animateLayoutChanges="true"
        android:background="@color/color_B3000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/speed_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/speed_75"
            android:textColor="@color/selector_speed"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/speed_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/speed_100"
            android:textColor="@color/selector_speed"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/speed_125"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/speed_125"
            android:textColor="@color/selector_speed"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/speed_150"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/speed_150"
            android:textColor="@color/selector_speed"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/speed_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/speed_200"
            android:textColor="@color/selector_speed"
            android:textSize="15sp" />
    </RadioGroup>

</RelativeLayout>